# mail-vault-app

./: .gitignore  BUILDING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  ICON_PROMPT.md  README.md  app.html  build-macos.sh  index.html  package-lock.json  package.json  privacy.html  robots.txt  screenshots  sitemap.xml  tailwind.config.js  terms.html  vite.config.js  vitest.config.js  wdio.conf.js
.github/workflows/: ci.yml  deploy-website.yml  promote-snaps.yml  release-appstore.yml  release-macos.yml  release.yml
docs/plans/: 2026-02-27-microsoft-oauth2-graph-design.md  2026-02-27-microsoft-oauth2-graph-plan.md  2026-02-28-thread-readability-spoofcheck-design.md
scripts/: build-appstore.sh  build-daemon.js  build-developer-id.sh  build-server.js  build-snap-staging.sh  bump-version.sh  check-version-consistency.sh  daemon-service.sh  dev.sh  download-sparkle.sh  generate-changelog.cjs  generate-tray-icon.cjs  setup-sparkle-keys.sh  signing-config.example.sh  test-build.sh  write-env.cjs
server/: index.js  oauth2Config.js
snap/: snapcraft.yaml
snap/gui/: mailvault.desktop
src/: App.jsx  main.jsx
src-core/: Cargo.toml
src-core/src/: cache.rs  graph.rs  lib.rs  maildir.rs  mime.rs  oauth2.rs  types.rs
src-core/src/imap/: mod.rs  pool.rs
src-daemon/: Cargo.toml  entitlements.plist
src-daemon/src/: auth.rs  classification.rs  contacts_index.rs  inference.rs  ipc.rs  learning.rs  llm.rs  main.rs  server.rs  smtp.rs  snapshot.rs  sync_engine.rs
src-daemon/src/imap/: mod.rs  pool.rs
src-tauri/: Cargo.toml  Info.plist  entitlements-appstore.plist  entitlements-sidecar.plist  entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  updater-linux.json  updater-macos.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: archive.rs  backup.rs  commands.rs  dns.rs  external_location.rs  github.rs  graph.rs  helper.rs  iap.rs  main.rs  migration.rs  move_emails.rs  oauth2.rs  restore.rs  smtp.rs
src-tauri/src/imap/: mod.rs  pool.rs
src/components/: AccountModal.jsx  BackupToast.jsx  BulkOperationProgress.jsx  BulkOperationsModal.jsx  BulkSaveProgress.jsx  ChangeServerModal.jsx  ChatBubbleView.jsx  ChatSenderList.jsx  ChatTopicsList.jsx  ChatViewWrapper.jsx  CleanupReport.jsx  ComposeModal.jsx  ConfirmDialog.jsx  ContactsPicker.jsx  EmailList.jsx  EmailRow.jsx  EmailRowSkeleton.jsx  EmailViewer.jsx  KeychainToast.jsx  LinkAlertIcon.jsx  LinkSafetyModal.jsx  MigrationToast.jsx  MoveToFolderDropdown.jsx  Onboarding.jsx  OutboxTray.jsx  ReplyToAlertIcon.jsx  RestoreModal.jsx  RestoreTray.jsx  RichTextEditor.jsx  RowActionMenu.jsx  SearchBar.jsx  SelectionActionBar.jsx  SenderAlertIcon.jsx  SenderInsightsPanel.jsx  SettingsPage.jsx  ShareUnlockModal.jsx  ShortcutsModal.jsx  Sidebar.jsx  ThreadRow.jsx  TimeCapsule.jsx  (+4 more)
src/config/: shareUnlock.js
src/hooks/: useBackgroundCaching.js  useBackupScheduler.js  useChatBodyLoader.js  useEmailScheduler.js  useKeyboardShortcuts.js  usePipelineCoordinator.js  useSenderInsights.js
src/services/: AccountPipeline.js  BulkOperationManager.js  EmailPipelineManager.js  UidMap.js  api.js  attachmentUtils.js  authUtils.js  backupScheduler.js  backupUtils.js  billingApi.js  cacheManager.js  cachePressure.js  classificationService.js  cleanupEngine.js  daemonClient.js  db.js  emailListUtils.js  graphConfig.js  keychainSession.js  keychainUtils.js  learningService.js  llmService.js  migrationManager.js  restoreDetection.js  restoreManager.js  ruleExporter.js  snapshotService.js  syncService.js  transport.js
src/stores/: accountStore.js  backupStore.js  cacheStore.js  composeStore.js  learningStore.js  mailStore.js  messageListStore.js  safeStorage.js  searchStore.js  selectionStore.js  settingsStore.js  snapshotStore.js  syncStore.js  themeStore.js  uiStore.js
src/styles/: index.css
src/utils/: buildFlags.js  contactsIndex.js  darkReaderInject.js  dateFormat.js  emailIframeTemplate.js  emailParser.js  iframeQuoteFolding.js  linkSafety.js  perfTrace.js  quoteFolding.js  replyToCheck.js  senderCheck.js  sentFolder.js  signatureFolding.js
src/workers/: emailCacheWorker.js
tests/e2e/: archive-flow.test.js  backup-settings.test.js  connected-accounts.test.js  connected-cold-start.test.js  connected-compose-extended.test.js  connected-email-list.test.js  connected-email-viewer.test.js  connected-features.test.js  connected-move-to-folder.test.js  connected-performance.test.js  connected-search.test.js  connected-unified-inbox.test.js  helpers.js  migration-wizard.test.js  ui-compose-templates.test.js  ui-keyboard-shortcuts.test.js  ui-layout-views.test.js  ui-settings-extended.test.js  ui-settings.test.js  ui-sidebar.test.js  visual-screens.test.js  visual-settings.test.js
tests/integration/: backup-runner.test.js  cross-account-email.test.js  dmg-smoke.test.js  email.test.js  imap-operations.test.js  imapOptimizations.test.js  local-only-flag.test.js  mailbox-stress.test.js  migration-runner.test.js  seed-mailboxes.js  smtp-send.test.js
tests/unit/: attachmentUtils.test.js  backup.test.js  backupCoordinator.test.js  billing.test.js  billingApi.test.js  chatView.test.js  deltaSyncOptimizations.test.js  emailListUtils.test.js  emailParser.test.js  emptyCacheCorruption.test.js  keychainSession.test.js  legacyMigration.test.js  oauth2.test.js  pipeline.test.js  quickLoad.test.js  resilientLoading.test.js  resolveBackupAccount.test.js  server.test.js  stateTransitions.test.js  viewUnification.test.js
website/: CNAME  ai-setup.html  billing-cancel.html  billing-success.html  blog.html  changelog.html  docs.html  download-stats.html  faq.html  features.html  index.html  mentioned-in.html  package-lock.json  package.json  privacy.html  sitemap.xml  terms.html  use-cases.html
website/api/: .env.example  .gitignore  database.js  package-lock.json  package.json  server.js
website/blog/: gmail-oauth2.html  gmail-storage-squeeze.html  how-we-test-mailvault.html  mailvault-240-stability.html  outlook-oauth-odyssey.html  refactoring-mailvault-from-monolith-to-modules.html  (+1 more)
(+87 files in other folders)
