[package]
name = "mailvault-core"
version = "0.1.0"
description = "MailVault shared core — email types, Maildir operations, cache management"
authors = ["MailVault"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.22"
mailparse = "0.15"
walkdir = "2"
dirs = "5"
tracing = "0.1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
