[package]
name = "mailvault-core"
version = "0.1.0"
description = "MailVault shared core — email types, Maildir operations, cache management"
authors = ["MailVault"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
base64 = "0.22"
mailparse = "0.15"
charset = "0.1"
walkdir = "2"
dirs = "5"
tracing = "0.1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
# Transport/protocol deps for shared imap/graph/oauth2/dns modules.
tokio = { version = "1", features = ["sync", "net", "io-util", "time", "rt", "macros"] }
async-imap = { version = "0.11", features = ["compress"] }
imap-proto = "0.16"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hickory-resolver = "0.26"
rand = "0.9"
url = "2"
