[package]
name = "mailvault-daemon"
version = "0.1.0"
description = "MailVault background daemon — IMAP sync, backups, LLM inference"
authors = ["MailVault"]
edition = "2021"

[[bin]]
name = "mailvault-daemon"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rand = "0.8"
dirs = "5"
thiserror = "2"
chrono = "0.4"
base64 = "0.22"
sha2 = "0.10"
walkdir = "2"
mailparse = "0.15"
flate2 = "1"
mailvault-core = { path = "../src-core" }
async-imap = { version = "0.11", features = ["compress"] }
imap-proto = "0.16"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
hickory-resolver = "0.25"
hostname = "0.4"
url = "2"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = "0.4"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8", features = ["metal"] }
keyring = { version = "3", features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
