[package]
name = "mailvault"
version = "1.5.0"
description = "A reactive email client with local storage"
authors = ["MailVault"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3", features = ["apple-native"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
base64 = "0.22"
dirs = "5"
mailparse = "0.15"
walkdir = "2"
zip = "2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-http = "2.5.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "net", "io-util", "time", "rt", "macros"] }
async-imap = "0.11"
imap-proto = "0.16"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
sha2 = "0.10"
rand = "0.8"
url = "2"
thiserror = "2"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
